[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30060

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer 1.0\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-06-19 15:11+0300\n"
+"PO-Revision-Date: 2005-07-27 03:19+0300\n"
 "Last-Translator: Guillem Jover <guillem@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -39,9 +39,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Es necessita establir algunes variables al Pegasos OpenFirmware per a poder "
-"arrencar el sistema Debian automàticament. A final de la instal·lació, el "
-"sistema arrencarà de nou. A l'indicatiu de Pegasos OpenFirmware, establiu "
-"les següents variables d'OpenFirmware per a habilitar l'arrencada automàtica:"
+"arrencar el sistema automàticament. A final de la instal·lació, el sistema "
+"arrencarà de nou. A l'indicatiu de Pegasos OpenFirmware, establiu les "
+"següents variables d'OpenFirmware per a habilitar l'arrencada automàtica:"
 
 #. Type: note
 #. Description
