--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-02-19 15:53+0100\n"
+"PO-Revision-Date: 2005-08-18 17:01+0200\n"
 "Last-Translator:  Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team:  Czech <provoz@debian.cz>\n"
 "MIME-Version: 1.0\n"
@@ -36,8 +36,8 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Pro automatické zavádění Debianu se musí nastavit některé proměnné v Pegasos "
-"OpenFirmwaru. Na závěr této fáze instalace se systém restartuje. Na výzvu "
+"Pro automatické zavádění systému se musí nastavit některé proměnné v Pegasos "
+"OpenFirmwaru. Na závěr této fáze instalace se systém restartuje. Na výzvě "
 "Pegasos OpenFirmwaru nastavte následující proměnné povolující automatické "
 "zavádění:"
 
