--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -45,11 +45,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Damit Ihr Computer Debian automatisch starten kann, müssen einige Variablen "
-"in Pegasos OpenFirmware festgelegt werden. Der Computer wird am Ende der "
-"Installation neu starten. Um den automatischen Bootvorgang zu aktivieren, "
-"geben Sie die folgenden Variablen an der Eingabeaufforderung der Pegasos "
-"OpenFirmware ein:"
+"Einige Variablen müssen in der Pegasos OpenFirmware eingestellt sein, damit "
+"der Computer automatisch startet. Am Ende der Installation wird der Computer "
+"neu starten. Stellen Sie die folgenden Pegasos OpenFirmware-Variablen am "
+"Boot-Prompt ein, damit der Computer automatisch startet."
 
 #. Type: note
 #. Description
