--- a/debian/po/el.po
+++ b/debian/po/el.po
@@ -50,10 +50,10 @@ msgid ""
 msgstr ""
 "Πρέπει να καθοριστούν ορισμένες μεταβλητές στο λογισμικό Pegasos "
 "OpenFirmware για να μπορέσει το σύστημα σας να εκκινήσει αυτόματα το "
-"Debian.  Στο τέλος αυτού του σταδίου της εγκατάστασης, θα γίνει επανεκκίνηση "
-"και το λογισμικό θα προσπαθήσει να κάνει αυτόματη εκκίνηση. Αυτό θα σας "
-"φέρει στην γραμμή εντολών του Pegasos OpenFirmware, όπου μπορείτε να ορίσετε "
-"τις ακόλουθες μεταβλητές:"
+"σύστημα.  Στο τέλος αυτού του σταδίου της εγκατάστασης, θα γίνει "
+"επανεκκίνηση και το λογισμικό θα προσπαθήσει να κάνει αυτόματη εκκίνηση. "
+"Αυτό θα σας φέρει στην γραμμή εντολών του Pegasos OpenFirmware, όπου "
+"μπορείτε να ορίσετε τις ακόλουθες μεταβλητές:"
 
 #. Type: note
 #. Description
