--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -50,7 +50,7 @@ msgstr ""
 "Et su süsteem võiks automaatselt Debiani alglaadida, tuleb seada mõned "
 "Pegasos OpenFirmware muutujad. Paigaldamise lõpus sooritab süsteem "
 "alglaadimise. Automaatse alglaadimise saavutamiseks sisesta Pegasos "
-"OpenFirmware käsureal järgnev:"
+"OpenFirmware käsureal järgnevad muutujad:"
 
 #. Type: note
 #. Description
