--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-02-14 01:01+0100\n"
+"PO-Revision-Date: 2005-08-05 19:01+0200\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galego <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -37,8 +37,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "É necesario estabrecer algunhas variables en Pegasos OpenFirmware para que o "
-"seu sistema inicie Debian automaticamente. Ao rematar a instalación, o "
-"sistema ha arrincar. No indicativo de Pegasos OpenFirmware, estabreza as "
+"seu sistema arrinque automaticamente. Ao rematar a instalación, o sistema "
+"hase reiniciar. No indicativo de Pegasos OpenFirmware, estabreza as "
 "seguintes variables de OpenFirmware para permitir o inicio automático:"
 
 #. Type: note
