--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-10-02 16:27+0700\n"
+"PO-Revision-Date: 2005-07-08 00:05+0700\n"
 "Last-Translator: Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>\n"
 "Language-Team: Debian Indonesia Team <debian-l10n-id@gurame.fisika.ui.ac."
 "id>\n"
@@ -45,10 +45,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Beberapa variabel perlu diatur dalam Pegasos OpenFirmware agar sistem Anda "
-"dapat booting Debian secara otomatis. Pada akhir instalasi, sistem akan "
-"booting ulang. Pada prompt Pegasos OpenFirmware, atur variabel OpenFirmware "
-"berikut ini untuk menghidupkan booting otomatis:"
+"Beberapa variabel perlu diatur pada Pegasos OpenFirmware agar sistem Anda "
+"dapat booting secara otomatis. Pada akhir instalasi, sistem akan reboot. "
+"Pada prompt Pegasos OpenFirmware, atur variabel OpenFirmware berikut ini "
+"untuk menghidupkan booting otomatis:"
 
 #. Type: note
 #. Description
