--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-02-07 22:23+0100\n"
+"PO-Revision-Date: 2005-08-18 14:09+0200\n"
 "Last-Translator: Stefano Canepa <sc@linux.it>\n"
 "Language-Team:   Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -50,11 +50,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Alcune variabili dell'OpenFirmware di Pegasos vanno impostate perché il "
-"sistema Debian venga avviato in maniera automatica. Al termine della "
-"installazione il sistema verrà riavviato. Al prompt dell'OpenFirmware di "
-"Pegasos le seguenti variabili dovranno essere impostate per permettere "
-"l'avvio automatico:"
+"Alcune variabili di Pegasos OpenFirmware vanno impostate per poter avviare "
+"il sistema Debian in automatico. Al termine della installazione il sistema "
+"verrà riavviato. Al prompt di Pegasos OpenFirmware le seguenti variabili "
+"dovranno essere impostate per permettere l'avvio automatico:"
 
 #. Type: note
 #. Description
