--- a/debian/po/mk.po
+++ b/debian/po/mk.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mk\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-04-19 13:55+0200\n"
+"PO-Revision-Date: 2005-07-26 20:54+0200\n"
 "Last-Translator: Georgi Stanojevski <gogo@stavre>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
@@ -43,9 +43,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Некои променливи треба да бидат поставени во Pegasos OpenFirmware за да може "
-"твојот систем да го бутира Дебиан автоматски. На крајот од инсталацијата "
-"системот ќе се ресетира. На промтот на Pegasos OpenFirmware, постави ги "
-"следните OpenFirmware променливи за да овозможиш автоматско бутирање:"
+"твојот систем да се подигне автоматски. На крајот од инсталацијата системот "
+"ќе се ресетира. На промтот на Pegasos OpenFirmware, постави ги следните "
+"OpenFirmware променливи за да овозможиш автоматско бутирање:"
 
 #. Type: note
 #. Description
