--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-11-09 09:25+0100\n"
+"PO-Revision-Date: 2005-07-27 16:39+0200\n"
 "Last-Translator: Bartosz Fenski <fenio@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
 "MIME-Version: 1.0\n"
@@ -37,7 +37,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"By móc uruchamiaæ Debiana automatycznie, nale¿y ustawiæ pewne zmienne "
+"By móc uruchamiaæ nowy system automatycznie, nale¿y ustawiæ pewne zmienne w "
 "Pegasos OpenFirmware. Po zakoñczeniu instalacji, system zostanie ponownie "
 "uruchomiony. Przy znaku zachêty Pegasos OpenFirmware ustaw nastêpuj±ce "
 "zmienne OpenFirmware by uaktywniæ automatyczne uruchamianie:"
