--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -29,12 +29,13 @@
 # 26-07-2005 - Miguel Figueiredo <elmig@debianpt.org> - 1f
 # 30-07-2005 - Miguel Figueiredo <elmig@debianpt.org> - 6f18u
 # 14-08-2005 - Miguel Figueiredo <elmig@debianpt.org> - 7f14u
+# 18-08-2005 - Miguel Figueiredo <elmig@debianpt.org> - 35f42u
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-06-13 08:46+0100\n"
+"PO-Revision-Date: 2005-08-14 11:31+0000\n"
 "Last-Translator:  Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team:  Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -60,8 +61,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Algumas variáveis necessitam ser definidas no Pegasos OpenFirmware de modo a "
-"que o seu sistema Debian arranque automaticamente. No fim da instalação, o "
-"sistema vai reiniciar. Na linha de comandos do Pegasos OpenFirmware, defina "
+"que o seu sistema Debian arranque automaticamente.  No fim da instalação, o "
+"sistema irá reiniciar.  Na linha de comandos do Pegasos OpenFirmware, defina "
 "as seguintes variáveis do OpenFirmware para habilitar o arranque automático:"
 
 #. Type: note
