--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-05-23 12:18+0100\n"
+"PO-Revision-Date: 2005-08-18 19:43-0300\n"
 "Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
 "Language-Team:  Debia-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -37,8 +37,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Algumas variáveis precisam ser definidas no Pegasos OpenFirmware para que "
-"seu sistema Debian possa ser capaz de ser iniciado automaticamente. Ao final "
-"da instalação, o sistema irá reiniciar. No prompt de comandos do Pegasos "
+"seu sistema possa ser capaz de ser iniciado automaticamente. Ao final da "
+"instalação, o sistema irá reiniciar. No prompt de comandos do Pegasos "
 "OpenFirmware, defina as seguintes variáveis do OpenFirmware para habilitar a "
 "inicialização automática :"
 
