--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-05-24 19:18+0400\n"
+"PO-Revision-Date: 2005-07-25 21:11+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@id.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -43,10 +43,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Для автоматического запуска Debian требуется установить некоторые переменные "
-"в Pegasos OpenFirmware. В конце установки, система будет перезагружена. Из "
-"приглашения Pegasos OpenFirmware установите следующие переменные для "
-"автозагрузки:"
+"Для автоматического запуска системы требуется установить некоторые "
+"переменные в Pegasos OpenFirmware. В конце установки система будет "
+"перезагружена. Из приглашения Pegasos OpenFirmware установите следующие "
+"переменные для автозагрузки:"
 
 #. Type: note
 #. Description
