--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-09-30 10:56+0200\n"
+"PO-Revision-Date: 2005-07-19 15:00+0200\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team:  Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -36,7 +36,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Na automatické štartovanie Debianu je potrebné nastavenie niektorých "
+"Na automatické spúšťanie systému je potrebné nastavenie niektorých "
 "premenných v Pegasos OpenFirmware. Na konci inštalácie sa systém reštartuje. "
 "V príkazovom režime Pegasos OpenFirmware môžete umožniť automatické "
 "štartovanie nastavením nasledovných premenných:"
