--- a/debian/po/sl.po
+++ b/debian/po/sl.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: sl\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-09-30 22:28+0100\n"
+"PO-Revision-Date: 2005-07-23 08:50+0200\n"
 "Last-Translator: Jure Čuhalev <gandalf@owca.info>\n"
 "Language-Team: Slovenščina <team@slo-tech.com>\n"
 "MIME-Version: 1.0\n"
@@ -47,7 +47,8 @@ msgid ""
 msgstr ""
 "Če želite samodejno zagnati Debian, je potrebno nastaviti nekaj spremenljivk "
 "v Pegasos OpenFirmware.  Na koncu namestitve se bo sistem ponovno zagnal.  "
-"Ob pozivniku Pegasos OpenFirmware boste lahko ročno zagnali jedro z:"
+"Ob pozivniku Pegasos OpenFirmware nastavite sledeče OpenFirmware "
+"spremenljivke, da boste omogočili samodejni zagon:"
 
 #. Type: note
 #. Description
