--- a/debian/po/sq.po
+++ b/debian/po/sq.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-09-30 23:36+0200\n"
+"PO-Revision-Date: 2005-06-23 19:48+0200\n"
 "Last-Translator:  Elian Myftiu <elian@alblinux.net>\n"
 "Language-Team: Debian L10n Albanian <debian-l10n-albanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -41,11 +41,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Dusa të ndryshueshme kanë nevojë të caktohen në Pegasos OpenFirmware në "
-"mënyrë që sistemi tënd të nisë Debian automatikisht.  Në fund të instalimit, "
-"sistemi do të riniset.  Në rreshtin e komandës Pegasos OpenFirmware, cakto "
-"të ndryshueshmet e mëposhtme OpenFirmware për të aktivizuar nisjen "
-"automatike:"
+"Disa të ndryshueshme nevojitet të caktohen në Pegasos OpenFirmware në mënyrë "
+"që sistemi tënd të nisë automatikisht.  Në fund të instalimit, sistemi do të "
+"riniset.  Në rreshtin e komandës Pegasos OpenFirmware, cakto të "
+"ndryshueshmet e mëposhtme OpenFirmware për të aktivizuar nisjen automatike:"
 
 #. Type: note
 #. Description
