--- a/debian/po/tl.po
+++ b/debian/po/tl.po
@@ -45,9 +45,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "May mga variable na kailangang itakda sa Pegasos OpenFirmware upang mag-boot "
-"ng awtomatiko ng Debian ang inyong sistema. Sa katapusan ng pagluklok, mag-"
-"re-reboot ang sistema. Sa Pegasos OpenFirmware prompt, itakda ang mga "
-"sumusunod ng mga OpenFirmware variable upang gumana ang auto-booting:"
+"ng awtomatiko.  Sa katapusan ng pagluklok, mag-re-reboot ang sistema.  Sa "
+"Pegasos OpenFirmware prompt, itakda ang mga sumusunod ng mga OpenFirmware "
+"variable upang gumana ang auto-booting:"
 
 #. Type: note
 #. Description
