--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-10-01 23:55+0300\n"
+"PO-Revision-Date: 2005-05-27 18:27+0300\n"
 "Last-Translator: Recai Oktaş <roktas@omu.edu.tr>\n"
 "Language-Team: Debian L10n Turkish <debian-l10n-turkish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -44,11 +44,11 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Sisteminizin Debian ile otomatik olarak açılması için Pegasos OpenFirmware "
+"Sisteminizin otomatik olarak açılması için Pegasos OpenFirmware "
 "yerleşilindeki bazı değişkenlerin ayarlanması gerekiyor.  Bu kurulum "
 "aşamasının sonunda sistem tekrar başlatılacak.  Otomatik önyüklemeyi "
 "etkinleştirmek için Pegasos OpenFirmware komut isteminde aşağıdaki "
-"OpenFirmware değişkenlerini ayarlayın"
+"OpenFirmware değişkenlerini ayarlayın:"
 
 #. Type: note
 #. Description
