--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-21 22:12+0300\n"
+"PO-Revision-Date: 2005-08-02 16:36+0300\n"
 "Last-Translator: Eugeniy Meshcheryakov <eugen@univ.kiev.ua>\n"
 "Language-Team: Ukrainian <ukrainian>\n"
 "MIME-Version: 1.0\n"
@@ -41,7 +41,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Для автоматичного завантаження Debian необхідно встановити змінні Pegasos "
+"Для автоматичного завантаження системи необхідно встановити змінні Pegasos "
 "OpenFirmware. Після закінчення встановлення система перезвантажиться. Для "
 "автоматичного завантаження, встановіть наступні змінні із командного рядка "
 "Pegasos OpenFirmware:"
