--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-06-05 21:13+0930\n"
+"PO-Revision-Date: 2005-08-10 14:15+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <debian-l10n-vietnamese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -44,7 +44,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Cần phải lặp một số biến trong Pegasos OpenFirmware để mà hệ thống bạn tự "
+"Cần phải lập một số biến trong Pegasos OpenFirmware để mà hệ thống bạn tự "
 "động khởi động Debian. Tại kết thúc cài đặt thì hệ thống sẽ khởi động lại. "
 "Khi xem dấu nhắc Pegasos OpenFirmware, bạn hãy lập những biến OpenFirmware "
 "theo đây để hiệu lực tự động khởi động:"
