--- a/debian/po/wo.po
+++ b/debian/po/wo.po
@@ -37,10 +37,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Amna wariaabal yu ñu soxlaa sampu ci Pegasos OpenFirmware ngir  sa sistem bi "
-"mana boot Debian ci otomatik. Saa bu istalaasioŋ bi aggee, sistem bi dana "
-"reboot. Ci prompt bu Pegasos OpenFirmware, na nga sampu wariaabal u "
-"OpenFirmware yii di ñëw, ngire nga mana am boot u otomatik:"
+"Warees naa sampu yenn wariaabal ci Pegasos OpenFirmware ngir sa sistem bi "
+"man boot ci otomatik. Bu istalaasioŋ bi aggee, sistem bi dana reboot. Ci "
+"prompt bu Pegasos OpenFirmware, nanga sampu wariaabal yu OpenFirmware yii di "
+"ñaw ngir nga mana am boot otomatik:"
 
 #. Type: note
 #. Description
