--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -37,9 +37,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"為了讓系統能自動由 Debian 開機，您必須在 Pegasos OpenFirmware 中設定一些參"
-"數。在安裝結束之時，系統將會重新開機。在 Pegasos OpenFirmware 的提示文字上，"
-"設定以下的 OpenFirmware 參數來啟用自動開機："
+"為了讓系統能自動開機，您必須在 Pegasos OpenFirmware 中設定一些參數。在安裝結"
+"束之時，系統將會重新開機。在 Pegasos OpenFirmware 的提示文字上，設定以下的 "
+"OpenFirmware 參數來啟用自動開機："
 
 #. Type: note
 #. Description
