--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-05-27 19:35+0300\n"
+"PO-Revision-Date: 2005-07-07 15:29+0300\n"
 "Last-Translator: Ossama M. Khayat <okhayat@yahoo.com>\n"
 "Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
@@ -35,9 +35,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"يجب تعيين بعض المتغيّرات في Pegasos OpenFirmware كي تمكّن نظامك من إقلاع "
-"ديبيان تلقائيّاً. عند نهاية التثبيت،سيعيد النظام الإقلاع. عند ملقن Pegasos "
-"OpenFirmware، حدّد المُتغيرات التالية كي تُمكّن الإقلاع التلقائي:"
+"يجب تعيين بعض المتغيرات في Pegasos OpenFirmware كي يتمكن نظامك من الإقلاع "
+"آليا. عند نهاية التثبيت، سيتم إعادة إقلاع النظام. يجب تعيين متغيرات  "
+"OpenFirmware عند ملقن Pegasos OpenFirmware لتمكين الإقلاع الآلي:"
 
 #. Type: note
 #. Description
