--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-09-30 12:09+0200\n"
+"PO-Revision-Date: 2005-08-18 12:41+0200\n"
 "Last-Translator: Claus Hindsgaul <claus_h@image.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -39,8 +39,8 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Der skal sættes nogle variable i Pegasos OpenFirmware for at dit system kan "
-"starte Debian op automatisk. Ved afslutningen af installationen vil systemet "
+"Der skal sættes nogle variable i Pegasos OpenFirmware, for at dit system kan "
+"starte op automatisk. Ved afslutningen af installationen vil systemet "
 "genstarte. Sæt følgende OpenFirmware-variable ved Pegasos Openfirmware's "
 "prompt for at aktivere automatisk opstart:"
 
