--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -38,7 +38,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-05-29 12:33+0200\n"
+"PO-Revision-Date: 2005-07-30 10:54+0200\n"
 "Last-Translator: Javier Fernández-Sanguino Peña <jfs@debian.org>\n"
 "Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -64,8 +64,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Debe establecer algunas variables en el «OpenFirmware» de Pegasos para poder "
-"arrancar el sistema Debian de forma automática. Al final de la instalación "
-"el sistema reiniciará. En el símbolo de espera de órdenes de «OpenFirmware» "
+"arrancar el sistema de forma automática. Al final de la instalación el "
+"sistema reiniciará. En el símbolo de espera de órdenes de «OpenFirmware» "
 "establezca las variables que se indican a continuación para activar el "
 "arranque automático:"
 
