--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-01-05 06:35+0100\n"
+"PO-Revision-Date: 2005-08-18 07:55+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -47,10 +47,10 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Certaines variables doivent être positionnées dans le micro-code "
-"OpenFirmware Pegasos afin que votre système Debian puisse démarrer "
-"automatiquement. À la fin de cette étape d'installation, le système "
-"redémarrera. À l'invite de l'OpenFirmware Pegasos, positionnez les variables "
-"suivantes pour activer le démarrage automatique :"
+"OpenFirmware Pegasos afin que votre système puisse démarrer automatiquement. "
+"À la fin de cette étape d'installation, le système redémarrera. À l'invite "
+"de l'OpenFirmware Pegasos, positionnez les variables suivantes pour activer "
+"le démarrage automatique :"
 
 #. Type: note
 #. Description
