--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-15 15:01+0900\n"
+"PO-Revision-Date: 2005-08-18 08:49+0900\n"
 "Last-Translator:  Kenshi Muto <kmuto@debian.org>\n"
 "Language-Team: Debian L10n Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -37,9 +37,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "あなたのシステムで Debian を自動的に起動するために、Pegasos OpenFirmware にい"
-"くつかの変数を設定する必要があります。このインストールステージの終わりに、シ"
-"ステムは再起動します。Pegasos OpenFirmware プロンプトでは、自動起動できるよう"
-"に、次のように OpenFirmware 変数を設定します:"
+"くつかの変数を設定する必要があります。このインストールの終わりに、システムは"
+"再起動します。Pegasos OpenFirmware プロンプトでは、自動起動できるように、次の"
+"ように OpenFirmware 変数を設定します:"
 
 #. Type: note
 #. Description
