--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-09-30 22:56+0900\n"
+"PO-Revision-Date: 2005-05-22 22:12+0900\n"
 "Last-Translator:  Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team:  Korean <cwryu@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -36,10 +36,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"시스템이 데비안으로 자동 부팅하도록 만드려면 Pegasos OpenFirmware에 변수 몇 "
-"개를 설정해야 합니다. 설치가 다 끝나면, 시스템이 다시 시작할 것입니다. "
-"Pegasos OpenFirmware 프롬프트에서, 다음 OpenFirmware 변수를 설정해서 자동 부"
-"팅을 켤 수 있습니다:"
+"시스템이 자동 부팅하도록 만드려면 Pegasos OpenFirmware에 변수 몇 개를 설정해"
+"야 합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. Pegasos "
+"OpenFirmware 프롬프트에서 다음 OpenFirmware 변수를 설정해서 자동 부팅을 켤 "
+"수 있습니다:"
 
 #. Type: note
 #. Description
