--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lt\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-26 10:28+0300\n"
+"PO-Revision-Date: 2005-08-01 23:43+0300\n"
 "Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
@@ -40,9 +40,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Kai kurie Pegasos OpenFirmware kintamieji turi būti nustatyti, tam kad Jūsų "
-"sistema galėtų automatiškai įkelti (boot) Debian'ą. Įdiegimo pabaigoje, "
-"sistema bus perkraunama. Esant Pegasos OpenFirmware kvietimui,  nustatykite "
-"sekančius OpenFirmware kintamuosius, kad būtų galimas automatinis įkėlimas:"
+"sistema galėtų būti automatiškai įkelta. Įdiegimo pabaigoje, sistema bus "
+"perkraunama. Esant Pegasos OpenFirmware kvietimui,  nustatykite sekančius "
+"OpenFirmware kintamuosius, kad būtų galimas automatinis įkėlimas:"
 
 #. Type: note
 #. Description
