--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nb\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-01-28 08:35+0100\n"
+"PO-Revision-Date: 2005-08-13 09:41+0200\n"
 "Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -45,7 +45,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Noen variabler i Pegasos OpenFirmware må være angitt for at Debian skal "
+"Noen variabler i Pegasos OpenFirmware må være angitt for at systemet skal "
 "kunne starte automatisk. På slutten av installasjonen vil systemet starte på "
 "nytt. På kommandolinja for Pegasos OpenFirmware kan du angi følgende "
 "variabler for OpenFirmware for å aktivere auto-oppstart:"
