--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-27 16:57+0200\n"
+"PO-Revision-Date: 2005-08-05 16:49+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -38,10 +38,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Om uw systeem automatisch Debian te laten opstarten dienen een aantal "
-"variabelen binnen de Pegasos OpenFirmware juist ingesteld te worden. Aan het "
-"eind van deze installatie zal het systeem herstarten. Eens op de Pegasos "
-"OpenFirmware prompt dienen de volgende variabelen ingesteld te worden om "
+"Sommige variabelen van de Pegasos OpenFirmware dienen ingesteld te worden "
+"opdat uw systeem automatisch zou opstarten. Aan het einde van het "
+"installatieproces zal uw systeem heropgestart worden. Op de OpenFirmware-"
+"prompt dienen de volgende OpenFirmware-variabelen ingesteld te worden om "
 "automatisch opstarten te activeren:"
 
 #. Type: note
