--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-06-07 22:59+0200\n"
+"PO-Revision-Date: 2005-06-25 19:19+0200\n"
 "Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -50,10 +50,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Unele variabile trebuie să fie setate în Pegasos OpenFirmware pentru ca "
-"sistemul dvs. să poată porni Debian automat.  La sfârşitul instalării "
-"sistemul va reporni.  La promptul Pegasos OpenFirmware setaţi următoarele "
-"variabile OpenFirmware pentru a activa pornirea automată:"
+"Unele variabile trebuie să fie iniţializate în Pegasos OpenFirmware pentru "
+"ca sistemul dvs. să poată porni automat. La sfârşitul instalării, sistemul "
+"va reporni. La promptul Pegasos OpenFirmware iniţializaţi următoarele "
+"variabile OpenFirmware pentru activarea pornirii automate:"
 
 #. Type: note
 #. Description
