--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-10-02 02:23+1200\n"
+"PO-Revision-Date: 2005-07-27 12:25+1200\n"
 "Last-Translator:  Carlos Z.F. Liu <carlos_liu@yahoo.com>\n"
 "Language-Team:  Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -36,9 +36,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"要使系统能自动启动 Debian，您需要在 Pegasos OpenFirmware 中设置一些变量。在安"
-"装结束后，系统将会重启。在出现 Pegasos OpenFirmware 提示符后，请设置以下几个 "
-"OpenFirmware 变量以开启自动启动功能："
+"要使系统能自动启动您的系统，您需要在 Pegasos OpenFirmware 中设置一些变量。在"
+"安装结束后，系统将会重启。在出现 Pegasos OpenFirmware 提示符后，请设置以下几"
+"个 OpenFirmware 变量以开启自动启动功能："
 
 #. Type: note
 #. Description
