[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30137

--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -38,7 +38,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-30 10:54+0200\n"
+"PO-Revision-Date: 2005-08-21 01:46+0200\n"
 "Last-Translator: Javier Fernández-Sanguino Peña <jfs@debian.org>\n"
 "Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -56,7 +56,6 @@ msgstr "Continuar sin cargador de arranque"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -64,8 +63,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Debe establecer algunas variables en el «OpenFirmware» de Pegasos para poder "
-"arrancar el sistema de forma automática. Al final de la instalación el "
-"sistema reiniciará. En el símbolo de espera de órdenes de «OpenFirmware» "
+"arrancar el sistema linux de forma automática. Al final de la instalación el "
+"sistema se reiniciará. En el símbolo de espera de órdenes de «OpenFirmware» "
 "establezca las variables que se indican a continuación para activar el "
 "arranque automático:"
 
@@ -111,7 +110,6 @@ msgstr "Estableciendo las variables del firmware para el arranque automático"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -120,10 +118,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Debe establecer algunas variables en el firmware del Netwinder NeTTrom para "
-"poder arrancar el sistema Debian de forma automática. Al final de la "
-"instalación el sistema rearrancará y el firmware intentará auto-arrancar. "
-"Puede cancelar este arranque pulsando cualquier tecla. Entrará en el sistema "
-"de órdenes de NeTTrom donde deberá ejecutar las siguientes órdenes:"
+"poder arrancar linux de forma automática. Al final de la instalación el "
+"sistema rearrancará y el firmware intentará auto-arrancar. Puede cancelar "
+"este arranque pulsando cualquier tecla. Entrará en el sistema de órdenes de "
+"NeTTrom donde deberá ejecutar las siguientes órdenes:"
 
 #. Type: note
 #. Description
@@ -146,14 +144,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Deberá hacer ésto sólo una vez. Después, introduzca la orden \"boot\" o "
-"reinicie el sistema para proceder al siguiente paso de la instalación de "
-"Debian."
+"Sólo tendrá que hacer ésto una vez. Para pasar al siguiente paso de la "
+"instalación deberá introducir, más adelante, la orden \"boot\" o reiniciar "
+"el sistema."
 
 #. Type: note
 #. Description
@@ -174,10 +171,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Tendrá que arrancar manualmente con el núcleo ${KERNEL} en la partición "
-"${BOOT} e introducir ${ROOT} como parámetros de arranque del núcleo."
+"${BOOT} e introducir ${ROOT} como un parámetro de arranque del núcleo."
