--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-18 08:49+0900\n"
+"PO-Revision-Date: 2005-08-21 10:54+0900\n"
 "Last-Translator:  Kenshi Muto <kmuto@debian.org>\n"
 "Language-Team: Debian L10n Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,14 +29,13 @@ msgstr "ブートローダなしで続ける"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"あなたのシステムで Debian を自動的に起動するために、Pegasos OpenFirmware にい"
+"あなたのシステムで linux を自動的に起動するために、Pegasos OpenFirmware にい"
 "くつかの変数を設定する必要があります。このインストールの終わりに、システムは"
 "再起動します。Pegasos OpenFirmware プロンプトでは、自動起動できるように、次の"
 "ように OpenFirmware 変数を設定します:"
@@ -84,7 +83,6 @@ msgstr "自動起動するためのファームウェア変数を設定してい
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -92,11 +90,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"あなたのシステムで Debian を自動的に起動するために、Netwinder NeTTrom ファー"
-"ムウェアにいくつかの変数を設定する必要があります。このインストールステージの"
-"終わりに、システムは再起動し、ファームウェアは自動起動を試みます。何かキーを"
-"押してこれを中止することもできます。すると、NeTTrom コマンドシステムに落ちる"
-"ので、次のようなコマンドを実行します:"
+"あなたのシステムで linux を自動的に起動するために、Netwinder NeTTrom ファーム"
+"ウェアにいくつかの変数を設定する必要があります。このインストールステージの終"
+"わりに、システムは再起動し、ファームウェアは自動起動を試みます。何かキーを押"
+"してこれを中止することもできます。すると、NeTTrom コマンドシステムに落ちるの"
+"で、次のようなコマンドを実行します:"
 
 #. Type: note
 #. Description
@@ -119,13 +117,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"これを 1 度だけ行う必要があります。そのあとで、次の Debian のインストールス"
-"テージに進むために、\"boot\" コマンドを入力するかシステムを再起動します。"
+"これを 1 度だけ行う必要があります。そのあとで、次のインストールステージに進む"
+"ために、\"boot\" コマンドを入力するかシステムを再起動します。"
 
 #. Type: note
 #. Description
@@ -146,7 +143,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
