--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nb\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-13 09:41+0200\n"
+"PO-Revision-Date: 2005-08-19 20:06+0200\n"
 "Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,6 @@ msgstr "Fortsett uten oppstartslaster"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -46,9 +45,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Noen variabler i Pegasos OpenFirmware må være angitt for at systemet skal "
-"kunne starte automatisk. På slutten av installasjonen vil systemet starte på "
-"nytt. På kommandolinja for Pegasos OpenFirmware kan du angi følgende "
-"variabler for OpenFirmware for å aktivere auto-oppstart:"
+"kunne starte linux automatisk. På slutten av installasjonen vil systemet "
+"starte på nytt. På kommandolinja for Pegasos OpenFirmware kan du angi "
+"følgende variabler for OpenFirmware for å aktivere auto-oppstart:"
 
 #. Type: note
 #. Description
@@ -92,7 +91,6 @@ msgstr "Angir fastprogram-variabler for automatisk oppstart"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -101,7 +99,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Noen av variablene i fastprogrammet til Netwinder NeTTrom må angis for at "
-"Debian-systemet skal starte automatisk. På slutten av dette "
+"systemet skal starte linux automatisk. På slutten av dette "
 "installasjonsssteget vil systemet starte på nytt og fastprogrammet vil prøve "
 "å starte systemet automatisk. Du kan avslutte dette ved å trykke en eller "
 "annen tast, og havner da i meny-systemet til NeTTrom. Der skal du angi "
@@ -128,14 +126,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Du trenger bare gjøre dette én gang. Etterpå skriver du inn «boot»-"
 "kommandoen eller starter systemet på nytt for å fortsette med neste steg i "
-"Debian-installasjonen."
+"installasjonen."
 
 #. Type: note
 #. Description
@@ -157,10 +154,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Du må starte opp manuelt med kjernen ${KERNEL} på partisjonen ${BOOT} og "
-"sende med ${ROOT} som parametre."
+"sende med ${ROOT} som kjerneparameter."
