--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-18 19:43-0300\n"
+"PO-Revision-Date: 2005-08-20 15:20-0300\n"
 "Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
 "Language-Team:  Debia-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,6 @@ msgstr "Continuar sem carregador de inicialização"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -85,7 +84,6 @@ msgstr "Definindo variáveis de firmware para inicialização automática"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -94,9 +92,9 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Algumas variáveis precisam ser definidas no firmware Netwinder NeTTrom para "
-"que seu sistema Debian possa ser capaz de ser iniciado automaticamente. Ao "
-"final deste estágio da instalação, o sistema irá reiniciar e o firmware irá "
-"tentar iniciar automaticamente. Você pode abortar esse processo pressionando "
+"que seu sistema possa ser capaz de ser iniciado automaticamente. Ao final "
+"deste estágio da instalação, o sistema irá reiniciar e o firmware irá tentar "
+"iniciar automaticamente. Você pode abortar esse processo pressionando "
 "qualquer tecla. Ao fazê-lo, você será levado ao sistema de comandos NeTTrom, "
 "onde você precisa executar os seguintes comandos :"
 
@@ -121,14 +119,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Você precisará fazer isto somente uma única vez. Após fazê-lo, informe o "
 "comando \"boot\" ou reinicie o sistema para prosseguir até o próximo estágio "
-"da instalação Debian."
+"da instalação."
 
 #. Type: note
 #. Description
@@ -150,7 +147,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
