--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-10 14:15+0930\n"
+"PO-Revision-Date: 2005-08-21 14:21+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <debian-l10n-vietnamese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -37,7 +37,6 @@ msgstr "Tiếp tục mà không có bộ tải khởi động"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -45,7 +44,7 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Cần phải lập một số biến trong Pegasos OpenFirmware để mà hệ thống bạn tự "
-"động khởi động Debian. Tại kết thúc cài đặt thì hệ thống sẽ khởi động lại. "
+"động khởi động Linux. Tại kết thúc cài đặt thì hệ thống sẽ khởi động lại. "
 "Khi xem dấu nhắc Pegasos OpenFirmware, bạn hãy lập những biến OpenFirmware "
 "theo đây để hiệu lực tự động khởi động:"
 
@@ -97,7 +96,6 @@ msgstr "Đang lập những biến phần vững (firmware) để tự động k
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -106,12 +104,12 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Cần phải lập một số biến trong phần vững Netwinder NeTTrom để mà hệ thống "
-"bạn sẽ tự động khởi động Debian. Tại kết thúc giai đoạn cài đặt thì hệ thống "
+"bạn sẽ tự động khởi động Linux. Tại kết thúc giai đoạn cài đặt thì hệ thống "
 "sẽ khởi động lại, và phần vững sẽ cố tự động khởi động. Có thể hủy bỏ hành "
 "động này bằng cách bấm bất cứ phím nào. Vậy sẽ thả bạn vào hệ thống lệnh "
 "NeTTrom nơi mà hãy thực hiện những lệnh theo đây:"
 
-# Variable: do not translate/ biến: đừng dịch
+# Literal: do not translate/ nghĩa chữ: đừng dịch
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
@@ -133,14 +131,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Bạn sẽ chỉ cần phải làm như thế một lần. Sau đó thì hãy nhập lệnh \"boot"
-"\" (khởi động) hay khởi động lại hệ thống để tiếp tục đến giai đoạn cài đặt "
-"Debian kế."
+"Bạn sẽ chỉ cần phải làm như thế một lần. Sau đó thì hãy nhập lệnh « boot "
+"» (khởi động) hay khởi động lại hệ thống để tiếp tục đến giai đoạn cài đặt "
+"kế."
 
 # Type: note
 # Description
@@ -165,7 +162,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
