--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-18 12:41+0200\n"
+"PO-Revision-Date: 2005-08-20 20:30+0200\n"
 "Last-Translator: Claus Hindsgaul <claus_h@image.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,6 @@ msgstr "Fortsæt uden opstartsindlæser"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -40,7 +39,7 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Der skal sættes nogle variable i Pegasos OpenFirmware, for at dit system kan "
-"starte op automatisk. Ved afslutningen af installationen vil systemet "
+"starte Linux op automatisk. Ved afslutningen af installationen vil systemet "
 "genstarte. Sæt følgende OpenFirmware-variable ved Pegasos Openfirmware's "
 "prompt for at aktivere automatisk opstart:"
 
@@ -86,7 +85,6 @@ msgstr "Sætter firmware-variable til automatisk opstart"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -95,7 +93,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Der skal sættes nogle variable i Netwinder NeTTrom-firmwaren for at dit "
-"system kan starte Debian op automatisk. Ved afslutningen af dette "
+"system kan starte Linux op automatisk. Ved afslutningen af dette "
 "installationsstadium vil systemet genstarte, og firmwaren vil forsøge at "
 "genstarte automatisk. Du kan afbryde dette ved et tryk på en tast. Det vil "
 "føre dig til NeTTroms kommandosystem, hvor du skal udføre følgende "
@@ -122,7 +120,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
@@ -150,10 +147,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Du bliver nødt til at starte op manuelt med ${KERNEL}-kernen på partitionen "
-"${BOOT} og ${ROOT} som kerneparameter."
+"${BOOT} og give kommandoen ${ROOT} som kerneparameter."
