--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-18 07:55+0200\n"
+"PO-Revision-Date: 2005-08-23 10:48+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,6 @@ msgstr "Continuer sans programme de démarrage"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -94,7 +93,6 @@ msgstr "Réglage des variables du micro-code pour démarrer automatiquement"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -103,8 +101,8 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Certaines variables doivent être positionnées dans le micro-code "
-"(« firmware ») NeTTrom du Netwinder afin que votre système Debian puisse "
-"démarrer automatiquement. À la fin de cette étape d'installation, le système "
+"(« firmware ») NeTTrom du Netwinder afin que votre système puisse démarrer "
+"automatiquement. À la fin de cette étape d'installation, le système "
 "redémarrera et le code logiciel tentera un démarrage automatique. Ce "
 "démarrage peut être interrompu en appuyant une touche : cela vous amènera au "
 "processeur de commandes de NeTTrom où vous devrez exécuter les commandes "
@@ -131,14 +129,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Cette opération ne doit être effectuée qu'une seule fois. Après cela, "
 "utilisez la commande « boot » ou redémarrez le système pour continuer "
-"l'installation de Debian."
+"l'installation."
 
 #. Type: note
 #. Description
@@ -160,7 +157,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
